# protoc-gen-typescript

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  test.bat  test.proto  test.sh  tsconfig.json
.github/workflows/: ci.yml  release.yaml
example/: test.proto
include/: api.proto  test.proto
src/: ast.rs  main.rs  pretty.rs  process.rs  utils.rs
src/files/: enumeration.rs  index.rs  message.rs  mod.rs  service.rs  service_client.rs  types.rs
src/pretty/: mod.rs  utils.rs
src/printer/: block.rs  class.rs  constructor.rs  enum_.rs  enum_item.rs  export.rs  if_block.rs  import.rs  method.rs  mod.rs  module.rs  prop.rs  switch_block.rs  while_block.rs
src/res/: types.ts
test/: BoolValue.test.ts  BytesValue.test.ts  DoubleValue.test.ts  Duration.test.ts  FloatValue.test.ts  Foo.test.ts  Int32Value.test.ts  Int64Value.test.ts  Message.test.ts  MyApi.test.ts  NumberTypedInts.test.ts  NumberTypedRepeatedInts.test.ts  RepeatedMessage.test.ts  StringTypedInts.test.ts  StringTypedRepeatedInts.test.ts  StringValue.test.ts  Timestamp.test.ts  UInt32Value.test.ts  UInt64Value.test.ts  proto-text.ts  protoc.ts  serde.ts
