[package]
name = "protoc-gen-typescript"
version = "1.0.1-next.0"
edition = "2021"
authors = ["Konstantin Möllers <ksm.moellers@gmail.com>"]
repository = "https://github.com/ksm2/protoc-gen-typescript"
keywords = ["typescript", "protobuf", "protobuf-plugin"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
include = ["/src/", "/LICENSE", "/README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2"
